--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,8 @@
 {% include header.html %}
 
     {% include home-hero.html %}
+    
+    {% include blogs.html %}
 
     <main id="portfolio">
       <div class="container">
